--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             </div>
             <div class="content">
                 <div class="left-col">
-                    <h1>THE<br>REAL<br>SOUND</h1>
+                    <h1>Safuda</h1>
                 </div>
                 <div class="right-col">
-                    <p>Click Here To Listen</p>
+                    <p>Click/Tap Here To Listen Safuda</p>
                     <img src="media/play.png" id="icon">
                 </div>
             </div>
         </div>
         <audio id="mySong">
-            <source src="media/DeshBashi To(Despacito Parody) LuisFonsi-Daddy Yankee Ft VATMAN[[VIDEO BABA PRODUCTIONS]] [ ezmp3.cc ].mp3" type="audio/mp3">
+            <source src="media/safuda.mp3" type="audio/mp3">
         </audio>
         <script>
             var mySong = document.getElementById("mySong");
